--- a/week_02/day_1/week2_day1_homework/week2_day1_homework.Rmd
+++ b/week_02/day_1/week2_day1_homework/week2_day1_homework.Rmd
@@ -45,6 +45,8 @@ left_join(card_database, customer_database, by = "cust_id")
 
 # - after joining, correct. 
 
+
+
 ```
 
 
@@ -78,6 +80,9 @@ hat_data <- read_csv("data/hat_observations.csv")
 hat_data_separated <- hat_data %>%
   separate(observation, c("hat_colour", "hat_type"), sep = ",")
 
+
+hat_observations <- read_csv("data/hat_observations.csv")
+
 ```
 
 ```{r}
@@ -92,6 +97,14 @@ hat_data_dates <- hat_data_separated %>%
 hat_data_dates %>%
   filter(hat_type == "beret") %>%
   slice_max(observation_count)
+
+
+# correct answer - because there are two dates that are on separate rows
+hat_data_dates %>% 
+  filter(hat_type == "beret") %>% 
+  group_by(date) %>% 
+  summarise(total = sum(observation_count)) %>% 
+  slice_max(total)
 
 ```
 
@@ -115,6 +128,15 @@ ext_database <- inner_join(transaction_database,
 # Question 2
 # Read in exam_scores and transform it into long format with two new columns exam_question and score. Then, using separate and select, remove superfluous information from the values in exam_question
 
+#answer - didn't complete
+exam_scores <- read_csv("data/exam_scores.csv")
+
+exam_scores_long <- exam_scores %>% 
+  pivot_longer(exam_Q1:exam_Q10, names_to = "exam_question", values_to = "score") 
+
+exam_scores_long %>% 
+  separate(exam_question, sep = "Q", into = c("extra_column", "exam_question")) %>% 
+  select(-extra_column)
 
 
 ```
