--- a/week_06/day_01/week6_homework/week6_day1.Rmd
+++ b/week_06/day_01/week6_homework/week6_day1.Rmd
@@ -15,8 +15,6 @@ titanic_data <- read.csv("titanic.csv")
 ```
 
 Calculate the conditional probabilities prob(survived|crew) and prob(survived|passenger)
-
-
 ```{r}
 # creating crew column
 titanic_data <- titanic_data %>%
@@ -29,9 +27,9 @@ titanic_data <- titanic_data %>%
 # prop_crew_survive <- titanic_data %>%
 #   summarise(prob = sum(crew == TRUE & survived == "yes") / n())
 
-# prob passenger survive
-# prop_passenger_survive <- titanic_data %>%
-#   summarise(prob = sum(crew != TRUE & survived == "yes") / n())
+prob passenger survive
+prop_passenger_survive <- titanic_data %>%
+  summarise(prob = sum(crew != TRUE & survived == "yes") / n())
 
 
 prob_given_crew <- titanic_data %>%
@@ -56,14 +54,18 @@ Q1
 Q2
 For 3 d6
 {1,2,3,4,5,6,1,2,3,4,5,6,1,2,3,4,5,6}
+6*6*6
 
 Q3
 /
 
 Q4
 5! = 1/3125 
+(note - wrong outcome, but correct calculation (5! is not 3125))
 
 Q5
 p1 = 6! = 1/720
 p2 = 6!/6*(6*6)! = 1/6!*6! = 1/518400
 
+(note - for p1, the answer is 6^6, which is not 720, because repeats are allowed)
+(note - for p2 - )
