update w6 d2 after review
updates w6 d2 homework after homework review (adds notes and any changes to answers)

--- a/week_06/day_02/week6_day2_homework/week6_day2_homework.Rmd
+++ b/week_06/day_02/week6_day2_homework/week6_day2_homework.Rmd
@@ -94,8 +94,12 @@ samsung_data %>%
       sd = 0.6847859),
     col = "red"
   ) +
-  plot(d, main="Density of ratings") +
-  polygon(d, col="red", border="blue") 
+  
+  
+  # plot(d, main="Density of ratings") +
+  # polygon(d, col="red", border="blue") 
+# didn't need to plot this - the density in the plot already did this, as it 
+# changed the plot from a histogram to a density plot
 
 # cumulative density function
 #??
