--- a/week_10/day_1/week10_day1_homework/week10_day1_homework.Rmd
+++ b/week_10/day_1/week10_day1_homework/week10_day1_homework.Rmd
@@ -5,6 +5,8 @@ output: html_notebook
 
 ```{r}
 library(tidyverse)
+library(ggfortify)
+library(broom)
 ```
 
 MVP
@@ -21,26 +23,48 @@ project_management <- read_csv("data/project_management.csv")
 
 Plot the data, taking estimated_length as the independent variable and actual_length as the dependent variable.
 ```{r}
-
+project_management %>%
+  ggplot(aes(x = estimated_length, y = actual_length)) +
+  geom_point()
 ```
 
 Calculate the correlation coefficient of estimated_length and actual_length and interpret the value you obtain.
 ```{r}
-
+cor(project_management$estimated_length, project_management$actual_length)
 ```
 
 Perform a simple linear regression using actual_length as the dependent variable, and estimated_length as the independent variable. Save the model object to a variable.
 ```{r}
+project_model <- lm(estimated_length ~ actual_length, project_management)
 
+# estimated_length is a FUNCTION of actual, ie it depends on the actual length, hence why it is first (because R is a functional language, and states its intended output first)
 ```
 
 Interpret the regression coefficient of estimated_length (i.e. slope, gradient) you obtain from the model. How do you interpret the r2 value reported by the model?
 ```{r}
+summary(project_model)
+janitor::clean_names(tidy(project_model))
+janitor::clean_names(glance(project_model))
+
+# r2 - is coefficient of determination
+# the proportion of the variation in the outcome variable that can be explained by variation in the explanatory variable
+# the higher r2, the better the line fits the data (but not necessarily causes!!)
+
+# the other important ones to note from here are:
+# term, which labels the coefficients
+# estimate, which contains the fitted values
+# p_value, which contains the p_value for a hypothesis test of that coefficient
 
 ```
+In this case, r2 is 65% - there is a good fit of the line, but it isn't very high.
 
 Is the relationship statistically significant? Remember, to assess this you need to check the p-value of the regression coefficient (or slope/gradient). But you should first check the regression diagnostic plots to see if the p-value will be reliable (don’t worry about any outlier points you see in the diagnostic plots, we’ll return to them in the extension).
 ```{r}
-
+autoplot(project_model)
 ```
 
+Is it statistically significant?
+
+No. It is above 0.05 (on both counts).
+
+Even then, before being able to check if we can rely on the p value, the QQ plot does not follow the line.
